# Queuely

./: .env.example  .gitignore  Dockerfile.worker  Makefile  README.md  package-lock.json  render.yaml
backend/: Dockerfile  pyproject.toml
backend/migrations/: README  env.py
backend/migrations/versions/: 20260525_0001_initial_schema.py  38c90200b3fe_add_ai_context_schema.py
backend/src/: requirements.txt
backend/src/queuely/: __init__.py
backend/src/queuely/api/: auth.py  dependencies.py  errors.py  main.py  rate_limit.py
backend/src/queuely/core/: config.py  exceptions.py  logging.py  middleware.py  responses.py  seed.py
backend/src/queuely/db/: health.py  job_store.py  session.py
backend/src/queuely/job_processors/: __init__.py  email_delivery.py  pdf_processing.py  report_generation.py  report_llm.py  runtime.py
backend/src/queuely/models/: __init__.py  auth.py  context.py  job.py  mixins.py  rate_limit.py  user.py  worker.py
backend/src/queuely/schemas/: auth.py  context.py  jobs.py  ops.py
backend/src/queuely/services/: ai_chat.py  ai_embeddings.py  auth.py  cloudinary_storage.py  jobs.py  prompting.py  pubsub.py  rate_limit.py  retrieval.py  (+2 more)
backend/storage/uploads/: .hidden_context.txt
backend/tests/: conftest.py  test_file_validation.py  test_integration_api.py  test_integration_ws.py  test_job_pipelines.py  test_prompting.py  test_request_size_limit.py  test_retrieval_filters.py  test_retrieval_integration.py  test_retry_dlq_unit.py  test_seed_superuser.py  test_stream_control.py  test_task_helpers.py  test_worker_retry_dlq_integration.py
(+69 files in other folders)
