[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queuely-backend"
version = "0.1.0"
description = "Backend services for Queuely"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "celery[redis]>=5.5.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "google-genai>=0.4.0",
  "openai>=1.82.0",
  "pgvector>=0.4.1",
  "pdfplumber>=0.11.0",
  "psycopg[binary]>=3.2.0",
  "pwdlib[argon2]>=0.2.1",
  "pypdf>=5.0.0",
  "pypdfium2>=4.0.0",
  "pydantic-settings>=2.10.0",
  "pytesseract>=0.3.10",
  "python-multipart>=0.0.20",
  "python-jose[cryptography]>=3.4.0",
  "redis>=6.0.0",
  "sqlalchemy>=2.0.41",
  "tiktoken>=0.9.0",
  "uvicorn[standard]>=0.34.0",
  "websockets>=15.0.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "ruff>=0.11.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
